# JamomaParamTest

./: CMakeLists.txt  README.md  ofAppRemote.maxpat
src/: ofApp.cpp  ofApp.h
